alright this kinda works as a dioxus app, it's a mess though

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </head>
 <body>
     <div id="main"></div>
-    <script type="module">
+    <!-- <script type="module">
         import init from "./dist/christmas.js";
         init();
-    </script>
+    </script> -->
 </body>
 </html>
